@@ -35,4 +35,27 @@ class Framework_ImapGeneric extends PHPUnit_Framework_TestCase
         $this->assertSame(array(1, 2, 3), $result);
         $this->assertCount(3, $result);
     }
+
+    /**
+     * Test for tokenizeResponse
+     */
+    function test_tokenizeResponse()
+    {
+        $response = "test brack[et] {1}\r\na {0}\r\n (item1 item2)";
+
+        $result = rcube_imap_generic::tokenizeResponse($response, 1);
+        $this->assertSame("test", $result);
+
+        $result = rcube_imap_generic::tokenizeResponse($response, 1);
+        $this->assertSame("brack[et]", $result);
+
+        $result = rcube_imap_generic::tokenizeResponse($response, 1);
+        $this->assertSame("a", $result);
+
+        $result = rcube_imap_generic::tokenizeResponse($response, 1);
+        $this->assertSame("", $result);
+
+        $result = rcube_imap_generic::tokenizeResponse($response, 1);
+        $this->assertSame(array('item1', 'item2'), $result);
+    }
 }
